# Orpheus

./: README.md  pyproject.toml
context/: DESIGN.md
deploy/: README.md  install-startup-shortcut.ps1  install-startup-task.ps1  uninstall-startup-shortcut.ps1  uninstall-startup-task.ps1
deploy/ollama/: README.md  docker-compose.yml
deploy/startup/: README.md  install-startup-task.ps1
docs/superpowers/plans/: 2026-07-02-orpheus-v1.md
orpheus/: __init__.py  __main__.py  app.py  audio.py  cleanup.py  history.py  hotkey.py  injector.py  settings.py  transcriber.py
orpheus/ui/: history_window.py  pill.py  settings_window.py  tray.py
scripts/: diagnose_levels.py  generate_icon.py
tests/: test_app.py  test_audio.py  test_cleanup.py  test_history.py  test_history_window.py  test_hotkey.py  test_icon.py  test_injector.py  test_pill.py  test_settings.py  test_smoke.py  test_transcriber.py
